--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "solc": "^0.4.15",
-    "web3": "^1.0.0-beta.18"
+    "web3": "^1.0.0-beta.18",
+    "yargs": "^8.0.2"
   }
 }
