--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.4",
     "solc": "^0.4.15",
     "web3": "^1.0.0-beta.18",
-    "yargs": "^8.0.2"
+    "ethereumjs-util": "4.5.0"
   }
 }
