--- a/node1.toml
+++ b/node1.toml
@@ -4,21 +4,8 @@ base_path = "./parity/io.parity.ethereum"
 db_path = "./parity/io.parity.ethereum/chains"
 keys_path = "./parity/io.parity.ethereum/keys"
 
-[ui]
-disable = true
-
-[rpc]
-hosts = ["all"]
-port = 8540
-apis = ["web3", "eth", "net", "parity", "traces", "rpc", "secretstore", "personal", "parity_accounts"]
-
-[ipc]
-disable = true
-
-[websockets]
-disable = true
-
 [mining]
+force_sealing = true
 reseal_on_txs = "none"
 usd_per_tx = "0"
 
