--- a/node1.toml
+++ b/node1.toml
@@ -6,7 +6,7 @@ keys_path = "./parity/io.parity.ethereum/keys"
 
 [mining]
 force_sealing = true
-reseal_on_txs = "none"
+reseal_on_txs = "all"
 usd_per_tx = "0"
 
 [misc]
