--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "(testrpc > /dev/null & truffle test) && kill -9 $(lsof -ti :8545)"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4",
     "solc": "^0.4.15",
-    "web3": "^1.0.0-beta.18",
-    "ethereumjs-util": "4.5.0"
+    "web3": "^1.0.0-beta.18"
   }
 }
