--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha './test/*.spec.sol'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4",
     "solc": "^0.4.15",
-    "web3": "^1.0.0-beta.18",
-    "ethereumjs-util": "4.5.0"
+    "web3": "^1.0.0-beta.18"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.0",
+    "assert": "^1.4.1"
   }
 }
